--- a/ASSETS/assets/styles.css
+++ b/ASSETS/assets/styles.css
@@ -2,25 +2,12 @@
 * {
   outline: 1px solid red;
 }
-* .shrikhand-regular {
-  font-family: "Shrikhand", serif;
-}
-* .roboto-regular {
-  font-family: "Roboto", sans-serif;
-}
-* .link {
-  text-decoration: none;
-}
-* header {
-  box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
-}
 * .navbar {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 63px;
-  background-color: white;
   padding: 0px;
 }
 * .navbar .logo {
@@ -30,15 +17,11 @@
 * body {
   margin: 0%;
 }
+* a {
+  text-decoration: none;
+}
 * main {
   width: 100%;
-}
-* .cards {
-  width: 100%;
-  height: 42px;
-  background-color: #EAEAEA;
-  padding: 0px;
-  box-shadow: 0px 4.5px 9px 1px rgb(0, 0, 0);
 }
 * .three-cards-set {
   display: flex;
@@ -192,18 +175,12 @@
   justify-content: center;
   text-align: center;
   font-family: "Roboto", sans-serif;
-  width: 45%;
+  width: 100%;
   height: 49px;
   font-weight: lighter;
   font-size: 16px;
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-bottom: 0%;
-  margin-left: 32%;
-  margin-bottom: 0%;
-  margin-top: 0px;
-  color: #000;
-  background-color: #F6F6F6;
+  padding: 0px;
+  margin: 0px;
 }
 * .explore-button {
   width: 100%;
@@ -213,15 +190,12 @@
   align-items: center;
 }
 * .explore-button #gradient-btn {
-  width: 15%;
+  width: 26%;
   height: 50px;
   border-radius: 37px;
   border: none;
   background: linear-gradient(3deg, #9356DC 0%, #FF79DA 100%);
-  box-shadow: 0px 4px 9.5px 0px rgba(9, 0, 0, 0.5);
   color: white;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
   padding-left: 0px;
   padding-right: 0px;
   text-decoration: none;
@@ -238,8 +212,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  text-decoration: none;
-  color: white;
   padding-top: 5%;
 }
 * .Fonctionement {
@@ -250,24 +222,12 @@
 * .Fonctionement h2 {
   width: 73%;
   font-size: 26px;
-  font-family: "Roboto", sans-serif;
   padding-left: 3%;
   margin-bottom: 0px;
   margin-top: 3%;
 }
-* h2 {
-  width: 73%;
-  margin-bottom: 0px;
-  margin-left: 4%;
-  margin-top: 10%;
-}
 * ul .cards {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #EAEAEA;
   padding: 0px;
-  box-shadow: 0px 1px 3px 0px rgba(9, 0, 0, 0.5);
 }
 * .restaurant-cards {
   background-color: #F6F6F6;
@@ -275,8 +235,6 @@
   padding-bottom: 30px;
 }
 * #restaurants {
-  display: flex;
-  flex-direction: column;
   gap: 20px;
 }
 * #restaurants h2 {
@@ -305,20 +263,13 @@
   height: 66px;
   padding: 0%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  box-sizing: border-box;
   color: #000;
+  text-decoration: none;
   font-family: "Roboto", sans-serif;
   background-color: white;
   border-radius: 0px 0px 15px 15px;
 }
 * .card-txt {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  text-overflow: ellipsis;
-  box-sizing: border-box;
   width: 339px;
   height: 74.25px;
   padding: 0px;
@@ -378,7 +329,7 @@
 }
 * footer .footer-section {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
 }
 * footer p {
   display: flex;
@@ -513,25 +464,11 @@
   padding-bottom: 40px;
 }
 
-@media only screen and (min-width: 769px) and (max-width: 1024px) {
-  header {
-    box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
-  }
-  .navbar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 63px;
-    background-color: white;
-    padding: 0px;
-  }
+@media (min-width: 769px) and (max-width: 1024px) {
   .navbar .logo {
-    width: 15%;
+    width: 53%;
     height: 34.2px;
-  }
-  body {
-    margin: 0%;
+    object-fit: contain;
   }
   main {
     width: 100%;
@@ -539,196 +476,46 @@
   .cards {
     width: 100%;
     height: 42px;
-    background-color: #EAEAEA;
-    padding: 0px;
-    box-shadow: 0px 4.5px 9px 1px rgb(0, 0, 0);
   }
   .three-cards-set {
-    display: flex;
-    flex-direction: row;
     width: 100%;
-    height: 228.38px;
-    padding-top: 0px;
+    height: 440px;
   }
   .steps {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
     width: 100%;
-    height: 228.38px;
-    gap: 0%;
+    height: 409px;
+    gap: 18%;
   }
   .cards-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 85%;
-    height: 66px;
-    padding: 0%;
-    box-sizing: border-box;
-    color: #000;
-    box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
-    background-color: #F6F6F6;
-    border-radius: 20px;
+    width: 75%;
+    height: 65.38px;
     gap: 10%;
   }
-  .ok {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 43px;
-    width: 100%;
-  }
-  .ko {
-    display: flex;
-    justify-content: start;
-    width: 25px;
-    position: relative;
-    top: 1px;
-    left: 9px;
-  }
-  .cards-txt {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-items: start;
-    flex-direction: column;
-    text-overflow: ellipsis;
-    box-sizing: border-box;
-    width: 100%;
-    height: 74.25px;
-    padding: 0px;
-  }
-  .svg-steps {
-    display: flex;
-    justify-content: space-around;
-    padding-right: 23px;
-    padding-left: 25px;
-  }
-  .svg-circle {
-    position: relative;
-    top: 1px;
-    left: 9px;
-    padding-right: 0px;
-  }
-  .cards-link {
-    width: 100%;
-    height: 240px;
-    display: flex;
-    justify-content: center;
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  .cards-title {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    font-family: "Roboto Condensed", sans-serif;
-    font-size: 12px;
-    width: 100%;
-    height: 22.67px;
-    margin: 0px;
-    margin-top: 0%;
-    padding-left: 0px;
-  }
-  .cards-subtitle {
-    font-size: 17px;
-    width: 326px;
-    height: 28px;
-    margin-top: 8px;
-    margin: 0px;
-    padding-left: 4%;
-  }
-  .new-badge {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
-  .location {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    color: #353535;
-    width: 30%;
-    height: 42px;
-    padding-top: 0%;
-    padding-left: 35%;
-    padding-right: 35%;
-    margin-top: 0%;
-    margin-bottom: 0%;
-    box-shadow: 0px 0.1px 0.5px 0px rgba(9, 0, 0, 0.5);
-  }
-  .menu {
-    padding-top: 1%;
-    height: 239px;
-    background-color: #F6F6F6;
-    box-shadow: 0px 0.5px 5px 1px rgb(0, 0, 0);
-  }
-  .hp-block {
-    width: 100%;
-    height: 205px;
-  }
   h1 {
-    font-family: "Roboto", sans-serif;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    font-size: 22px;
-    margin-right: 0px;
     width: 100%;
-    margin-left: 0%;
-    margin-right: 0px;
-    margin-bottom: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
-    height: 47px;
-    background-color: #F6F6F6;
+    margin: 0px;
+    padding: 0px;
+    height: 68px;
   }
   h1 .title-br {
-    display: none;
+    display: block;
   }
   .text-hp {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
     width: 100%;
     height: 49px;
-    font-weight: lighter;
-    font-size: 16px;
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-bottom: 0%;
-    margin-left: 0%;
-    margin-bottom: 0%;
-    margin-top: 0px;
-    color: #000;
-    background-color: #F6F6F6;
-  }
-  .explore-button {
-    width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #F6F6F6;
+    padding: 0px;
+    margin: 0%;
   }
   .explore-button #gradient-btn {
-    text-align: center;
-    width: 100%;
+    width: 46%;
     height: 50px;
-    border-radius: 37px;
-    border: none;
-    background: linear-gradient(3deg, #9356DC 0%, #FF79DA 100%);
-    box-shadow: 0px 4px 9.5px 0px rgba(9, 0, 0, 0.5);
-    color: white;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
     padding-left: 0px;
     padding-right: 0px;
-    text-decoration: none;
   }
   .explore-button :hover {
     color: #F6F6F6;
@@ -737,174 +524,54 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  #gradient-btn a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     text-decoration: none;
-    color: white;
-    padding-top: 5%;
   }
   .Fonctionement {
     width: 100%;
-    height: 260px;
+    height: 440px;
     margin-top: 0%;
   }
   .Fonctionement h2 {
-    width: 73%;
-    font-size: 26px;
-    font-family: "Roboto", sans-serif;
     padding-left: 3%;
     margin-bottom: 0px;
     margin-top: 3%;
-  }
-  h2 {
-    width: 73%;
-    margin-bottom: 0px;
-    margin-left: 4%;
-    margin-top: 10%;
+    margin-left: 13%;
   }
   ul .cards {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #EAEAEA;
-    padding: 0px;
-    box-shadow: 0px 1px 3px 0px rgba(9, 0, 0, 0.5);
   }
   .restaurant-cards {
-    background-color: #F6F6F6;
     margin-bottom: 0px;
     padding-bottom: 30px;
   }
-  #restaurants {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  #restaurants h2 {
-    padding-top: 30px;
-    padding-bottom: 0px;
-    margin-top: 0px;
-    margin-left: 0px;
-    margin-bottom: 2%;
-  }
   .card-section {
     display: grid;
-    align-items: center;
-    justify-content: center;
-    grid-template-columns: 44% 44%;
-    gap: 25px;
-    width: 100%;
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  .card-content {
-    display: flex;
-    align-items: start;
-    width: 100%;
-    height: 66px;
-    padding: 0%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
-    color: #000;
-    font-family: "Roboto", sans-serif;
-    background-color: white;
-    border-radius: 0px 0px 15px 15px;
-  }
-  .card-txt {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    text-overflow: ellipsis;
-    box-sizing: border-box;
-    width: 339px;
-    height: 74.25px;
-    padding: 0px;
-  }
-  .card-link {
-    width: 26%;
-    height: 240px;
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  .card-title {
-    font-size: 18px;
-    width: 326px;
-    height: 24px;
-    margin: 0px;
-    padding-top: 13px;
-    padding-left: 4%;
-  }
-  .card-subtitle {
-    font-size: 17px;
-    width: 326px;
-    height: 28px;
-    margin-top: 8px;
-    margin: 0px;
-    padding-left: 4%;
-  }
-  .card img {
-    width: 100%;
-    height: 174px;
-    object-fit: cover;
-    border-radius: 15px 15px 0px 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .card-set {
-    width: 100%;
-  }
-  .card {
-    display: flex;
-    justify-content: center;
-    background-color: #EAEAEA;
-    width: 340px;
-    height: 240px;
-    padding: 0px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    grid-template-columns: 90%;
+    gap: 18px;
+    height: 1015px;
   }
   footer {
-    display: flex;
     padding-left: 5%;
-    justify-content: end;
-    gap: 20px;
-    background-color: #353535;
-    color: white;
-    align-items: flex-end;
-    gap: 20px;
   }
   footer .footer-section {
     display: flex;
-    flex-direction: row;
-  }
-  footer p {
-    display: flex;
-    padding-bottom: 2%;
-    margin: 0px;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
+    flex-direction: column;
+    width: 100%;
   }
   footer h3 {
     margin-right: 20px;
-    display: flex;
-    justify-content: flex-end;
     width: 136px;
     font-size: 16px;
     font-family: "Shrikhand", serif;
   }
   footer .footer-text {
     display: flex;
-    flex-direction: row;
-    gap: 20px;
-    margin-top: 16px;
+    flex-direction: column;
   }
 }
-@media only screen and (max-width: 768px) {
+@media (max-width:768px) {
   .shrikhand-regular {
     font-family: "Shrikhand", serif;
   }
@@ -1118,7 +785,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    width: 68%;
+    width: 46%;
     height: 50px;
     border-radius: 37px;
     border: none;
