--- a/ASSETS/sass/main.scss
+++ b/ASSETS/sass/main.scss
@@ -3,26 +3,26 @@
 
 
 *{outline:1px solid red;
-.shrikhand-regular {
-    font-family: "Shrikhand", serif;
-}
-.roboto-regular {
-    font-family: "Roboto", sans-serif;
-}
-.link { 
-    text-decoration: none;
-}
+// .shrikhand-regular {
+//     font-family: "Shrikhand", serif;
+// }
+// .roboto-regular {
+//     font-family: "Roboto", sans-serif;
+// }
+// .link { 
+//     text-decoration: none;
+// }
 // header//
-header { 
-    box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
-}
+// header { 
+//     box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
+// }
 .navbar {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%; 
     height: 63px;
-    background-color: white;
+    // background-color: white;
     padding: 0px;
 .logo {
     width: 15%;
@@ -33,18 +33,21 @@ header {
 body {
     margin: 0%;
 }
+a { 
+    text-decoration: none;
+}
 // main//
 
 main {
     width: 100%;
 }
-.cards{
-    width: 100%;
-    height: 42px;
-    background-color:$Background-color-cards ;
-    padding: 0px;
-    box-shadow: 0px 4.5px 9px 1px rgba(0, 0, 0, 9);
-}
+// .cards{
+//     width: 100%;
+//     height: 42px;
+//     background-color:$Background-color-cards ;
+//     padding: 0px;
+//     box-shadow: 0px 4.5px 9px 1px rgba(0, 0, 0, 9);
+// }
 
 .three-cards-set{
     @include flexdirectionrow();
@@ -201,18 +204,13 @@ h1 {
     justify-content: center;
     text-align: center;
     font-family:$font-stack2;
-    width: 45%;
+    width: 100%;
     height: 49px;
     font-weight: lighter;
     font-size: 16px;
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-bottom: 0%;
-    margin-left: 32%;
-    margin-bottom: 0%;
-    margin-top: 0px;
-    color: #000;
-    background-color:$Background-color;
+    padding: 0px;
+    margin: 0px;
+    // background-color:$Background-color;
 }
 .explore-button{
     width: 100%;
@@ -222,15 +220,19 @@ h1 {
     align-items: center;
     // background-color:$Background-color;
 #gradient-btn{
-    width: 15%;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // text-align: center;
+    width: 26%;
     height: 50px;
     border-radius: 37px;
     border:none;
     background: linear-gradient(3deg,  #9356DC 0%, #FF79DA 100%);
-    box-shadow: 0px 4px 9.5px 0px rgba(9, 0, 0, 0.5);
+    // box-shadow: 0px 4px 9.5px 0px rgba(9, 0, 0, 0.5);
     color: #FFFF;
-    font-family: $font-stack;
-    font-size: 16px;
+    // font-family: $font-stack;
+    // font-size: 16px;
     padding-left: 0px;
     padding-right: 0px;
     text-decoration: none;
@@ -244,8 +246,8 @@ h1 {
     @include flexbox();
 a {
     @include flexbox();
-    text-decoration: none;
-    color: white;
+    // text-decoration: none;
+    // color: white;
     padding-top: 5%;
 }
 }
@@ -259,27 +261,27 @@ a {
 h2 {
     width: 73%;
     font-size: 26px;
-    font-family: $font-stack;
+    // font-family: $font-stack;
     padding-left: 3%;
     margin-bottom: 0px;
     margin-top: 3%;
 }     
 }
-h2 { 
-    width: 73%;
-    margin-bottom: 0px;
-    margin-left: 4%;
-    margin-top: 10%;
-}
+// h2 { 
+//     width: 73%;
+//     margin-bottom: 0px;
+//     margin-left: 4%;
+//     margin-top: 10%;
+// }
 
 ul {
 .cards{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $Background-color-cards;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // background-color: $Background-color-cards;
     padding: 0px;
-    box-shadow: 0px 1px 3px 0px rgba(9, 0, 0, 0.5);
+    // box-shadow: 0px 1px 3px 0px rgba(9, 0, 0, 0.5);
 }
 }
 .restaurant-cards {
@@ -288,7 +290,7 @@ ul {
     padding-bottom: 30px;
 }
 #restaurants{
-@include flexdirectioncolumn();
+// @include flexdirectioncolumn;
 gap: 20px;
 h2{
     padding-top: 30px;
@@ -313,24 +315,26 @@ h2{
 .card-content {
     display: flex;
     align-items: start;
+    // object-fit: cover;
     width: 100%;
     height: 66px;
     padding:0%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
+    // flex-direction: column;
+    // justify-content: space-between;
+    // box-sizing: border-box;
     color: #000;
+    text-decoration: none;
     font-family: $font-stack;
     background-color: white;
     border-radius:0px 0px 15px 15px;
 }
 .card-txt {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    text-overflow: ellipsis;
-    box-sizing: border-box;
+    // display: flex;
+    // justify-content: space-between;
+    // flex-direction: column;
+    // text-overflow: ellipsis;
+    // box-sizing: border-box;
     width: 339px;
     height: 74.25px;
     padding: 0px;
@@ -389,7 +393,7 @@ footer {
     align-items: flex-end;
 .footer-section{ 
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
 }
 p{
     display: flex;
@@ -413,11 +417,11 @@ h3 {
     margin-top: 16px;
 }
 } 
-
 main {
     width: 100%;
     max-width: 1440px;
 }
+// page menue//
 .arrow{ 
     display: flex;
     justify-content: start;
@@ -523,27 +527,15 @@ main {
 }
 }
 
-@media only screen and (min-width: 769px) and (max-width: 1024px) {
+@media #{$tablet}{
 // header//
-header { 
-    box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
-}
 .navbar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%; 
-    height: 63px;
-    background-color: white;
-    padding: 0px;
+
 .logo {
-    width: 15%;
+    width: 53%;
     height: 34.2px;
+    object-fit: contain;
 }
-}
-// body//
-body {
-    margin: 0%;
 }
 // main//
 main {
@@ -552,375 +544,204 @@ main {
 .cards{
     width: 100%;
     height: 42px;
-    background-color:$Background-color-cards ;
-    padding: 0px;
-    box-shadow: 0px 4.5px 9px 1px rgba(0, 0, 0, 9);
 }
 .three-cards-set{
-    @include flexdirectionrow();
     width: 100%;
-    height: 228.38px;
-    padding-top: 0px;
+    height: 440px;
 }
 .steps { 
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
     width: 100%;
-    height: 228.38px;
-    gap: 0%;
+    height: 409px;
+    gap: 18%;
 }
 .cards-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 85%;
-    height: 66px;
-    padding:0%;
-    box-sizing: border-box;
-    color: #000;
-    box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
-    background-color: $Background-color;
-    border-radius:20px;
+    width: 75%;
+    height: 65.38px;
     gap: 10%;
 }
-.ok { 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 43px;
-    width: 100%;
-}
-.ko {
-    display: flex;
-    justify-content: start;
-    width: 25px;
-    position: relative;
-    top: 1px;
-    left: 9px;
-}
-.cards-txt {
-    @include flexbox();
-    align-items: start;
-    flex-direction: column;
-    text-overflow: ellipsis;
-    box-sizing: border-box;
-    width: 100%;
-    height: 74.25px;
-    padding: 0px;
-}
-.svg-steps {
-    display: flex;
-    justify-content: space-around;
-    padding-right: 23px;
-    padding-left: 25px;
-}
-.svg-circle{ 
-    position: relative;
-    top: 1px;
-    left: 9px;
-    padding-right: 0px;
-}
-.cards-link {
-    width: 100%;
-    height: 240px;
-    display: flex;
-    justify-content: center;
-    padding-left: 0px;
-    padding-right: 0px;
-}
-.cards-title {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    font-family: $font-stack4;
-    font-size: 12px;
-    width: 100%;
-    height: 22.67px;
-    margin: 0px;
-    margin-top: 0%;
-    padding-left: 0px;
-}
-.cards-subtitle {
-    font-size: 17px;
-    width: 326px;
-    height: 28px;
-    margin-top:8px;
-    margin: 0px;
-    padding-left: 4%;
-} 
-// Restaurant section//
-// svg {
-//     display: flex;
-//     justify-content: space-around;
-//     padding-right: 10px;
-// }
-.new-badge{
-    position: absolute;
-    top: 10px;
-    right: 10px; 
-}
-.location{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family:$font-stack;
-    font-size: 16px;
-    color:#353535;
-    width:30%;
-    height:42px;
-    padding-top: 0%;
-    padding-left: 35%;
-    padding-right: 35%;
-    margin-top: 0%;
-    margin-bottom: 0%;
-    box-shadow: 0px 0.1px 0.5px 0px rgba(9, 0, 0, 0.5);
-}
-.menu { 
-    padding-top: 1%;
-    height: 239px;
-    background-color: $Background-color;
-    box-shadow: 0px 0.5px 5px 1px rgba(0, 0, 0, 9);
-}
-.hp-block{
-    width: 100%;
-    height: 205px;
-}
 h1 { 
-    font-family: $font-stack;
-    display: flex;
-    justify-content: center;
-    text-align: center;;
-    font-size: 22px;
-    margin-right: 0px;
     width: 100%;
-    margin-left: 0%;
-    margin-right: 0px;
-    margin-bottom: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
-    height: 47px;
-    background-color:$Background-color;
-.title-br{
-    display: none;
+    margin: 0px;
+    padding: 0px;
+    height: 68px;
+.title-br {
+    display: block;
 }
 }
 .text-hp { 
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    font-family:$font-stack2;
     width: 100%;
     height: 49px;
-    font-weight: lighter;
-    font-size: 16px;
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-bottom: 0%;
-    margin-left: 0%;
-    margin-bottom: 0%;
-    margin-top: 0px;
-    color: #000;
-    background-color:$Background-color;
+    padding: 0px;
+    margin: 0%;
 }
 .explore-button{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color:$Background-color;
 #gradient-btn{
-    text-align: center;
-    width: 100%;
+    width: 46%;
     height: 50px;
-    border-radius: 37px;
-    border:none;
-    background: linear-gradient(3deg,  #9356DC 0%, #FF79DA 100%);
-    box-shadow: 0px 4px 9.5px 0px rgba(9, 0, 0, 0.5);
-    color: #FFFF;
-    font-family: $font-stack;
-    font-size: 16px;
     padding-left: 0px;
     padding-right: 0px;
-    text-decoration: none;
 }
 :hover {
     color: #F6F6F6;
 }
 }
 #gradient-btn{
-    @include flexbox();
-a {
-    @include flexbox();
+    @include flexbox;
     text-decoration: none;
-    color: white;
-    padding-top: 5%;
-}
 }
 .Fonctionement {
     width: 100%;
-    height: 260px;
+    height: 440px;
     margin-top: 0%;
 }
 .Fonctionement{
 h2 {
-    width: 73%;
-    font-size: 26px;
-    font-family: $font-stack;
     padding-left: 3%;
     margin-bottom: 0px;
     margin-top: 3%;
+    margin-left: 13%;
 }     
-}
-h2 { 
-    width: 73%;
-    margin-bottom: 0px;
-    margin-left: 4%;
-    margin-top: 10%;
 }
 ul {
 .cards{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $Background-color-cards;
-    padding: 0px;
-    box-shadow: 0px 1px 3px 0px rgba(9, 0, 0, 0.5);
+    // background-color: $Background-color-cards;
+    // padding: 0px;
+    // box-shadow: 0px 1px 3px 0px rgba(9, 0, 0, 0.5);
 }
 }
 .restaurant-cards {
-    background-color: $Background-color;
     margin-bottom: 0px;
     padding-bottom: 30px;
 }
-#restaurants{
-@include flexdirectioncolumn();
-gap: 20px;
-h2{
-    padding-top: 30px;
-    padding-bottom: 0px;
-    margin-top: 0px;
-    margin-left: 0px;
-    margin-bottom: 2%;
-}
-}
+// #restaurants{
+// h2{
+//     padding-top: 30px;
+//     // padding-bottom: 0px;
+//     // margin-top: 0px;
+//     // margin-left: 23px;
+//     // margin-bottom: 5%;
+// }
+// }
 .card-section {
     display: grid;
-    align-items: center;
-    justify-content: center;
-    grid-template-columns: 44% 44%;
-    gap: 25px;
-    width: 100%;
-    padding-left: 0px;
-    padding-right: 0px;
+    grid-template-columns: 90%;
+    gap: 18px;
+    height: 1015px;        
+    // align-items: center;
+     // justify-content: center;
+    // width: 100%;
+    // padding: 0%;
 }
-.card-content {
-    display: flex;
-    align-items: start;
-    width: 100%;
-    height: 66px;
-    padding:0%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
-    color: #000;
-    font-family: $font-stack;
-    background-color: white;
-    border-radius:0px 0px 15px 15px;
-}
-.card-txt {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    text-overflow: ellipsis;
-    box-sizing: border-box;
-    width: 339px;
-    height: 74.25px;
-    padding: 0px;
-}
-.card-link {
-    width: 26%;
-    height: 240px;
-    padding-left: 0px;
-    padding-right: 0px;
-}
-.card-title {
-    font-size: 18px;
-    width: 326px;
-    height: 24px;
-    margin: 0px;
-    padding-top: 13px;
-    padding-left: 4%;
-}
-.card-subtitle {
-    font-size: 17px;
-    width: 326px;
-    height: 28px;
-    margin-top:8px;
-    margin: 0px;
-    padding-left: 4%;
-} 
-.card img {
-    width: 100%;
-    height: 174px;
-    object-fit: cover;
-    border-radius: 15px 15px 0px 0px;
-    @include flexbox();
-}
-.card-set{ 
-width: 100%;
-
-}
-
-.card {
-    display: flex;
-    justify-content: center;
-    background-color: $Background-color-cards;
-    width: 340px;
-    height: 240px;
-    padding: 0px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-}
-// footer//
+// .card-content {
+//         // display: flex;
+//         // align-items: start;
+//         // width: 100%;
+//         // height: 66px;
+//         // padding:0%;
+//         // display: flex;
+//         flex-direction: column;
+//         justify-content: space-between;
+//         box-sizing: border-box;
+//         color: #000;
+//         font-family: $font-stack;
+//         background-color: white;
+//         border-radius:0px 0px 15px 15px;
+// }
+    // .card-txt {
+    //     display: flex;
+    //     justify-content: space-between;
+    //     flex-direction: column;
+    //     text-overflow: ellipsis;
+    //     box-sizing: border-box;
+    //     width: 245px;
+    //     height: 74.25px;
+    //     padding: 0px;
+    // }
+    // .card-link {
+    //     width: 100%;
+    //     height: 240px;
+    //     padding-left: 0px;
+    //     padding-right: 0px;
+    // }
+    // .card-title {
+    //     font-size: 18px;
+    //     width: 245px;
+    //     height: 24px;
+    //     margin: 0px;
+    //     padding-top: 13px;
+    //     padding-left: 4%;
+    // }
+    // .card-subtitle {
+    //     font-size: 17px;
+    //     width: 245px;
+    //     height: 28px;
+    //     margin-top:8px;
+    //     margin: 0px;
+    //     padding-left: 4%;
+    // } 
+    // .card img {
+    //     width: 100%;
+    //     height: 174px;
+    //     object-fit: cover;
+    //     border-radius: 15px 15px 0px 0px;
+    //     @include flexbox();
+    // }
+    // .card-set{ 
+    // width: 100%;
+    // }
+    // .card {
+    //     display: flex;
+    //     justify-content: center;
+    //     background-color: $Background-color-cards;
+    //     width: 100%;
+    //     height: 240px;
+    //     padding: 0px;
+    //     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    // }
+    // footer//
 footer {
-    display: flex;
+    // display: flex;
     padding-left: 5%;
-    justify-content: end;
-    gap: 20px;
-    background-color: #353535;
-    color: white;
-    align-items: flex-end;
-    gap: 20px;
+    // justify-content: center;
+    // gap: 20px;
+    // gap:10px;
+     // background-color: #353535;
+    // color: white;
+    // align-items: flex-end;
+    // gap: 20px;
 .footer-section{ 
-    display: flex;
-    flex-direction: row;
+    @include flexdirectioncolumn;
+    width: 100%;
 }
-p{
-    display: flex;
-    padding-bottom: 2%;
-    margin: 0px;
-    font-family: $font-stack2;
-    font-size: 16px;
-}
+// p{
+//     display: flex;
+//     padding-bottom: 2%;
+//     margin: 0px;
+//     font-family: $font-stack2;
+//     font-size: 16px;
+// }
 h3 {
-    margin-right: 20px;
-    display: flex;
-    justify-content: flex-end;
+    margin-right: 20px; 
     width: 136px;
     font-size: 16px;
     font-family: $font-stack3;
 }
 .footer-text{
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    margin-top: 16px;
+    @include flexdirectioncolumn;
+    // gap: 20px;
+    // margin-top: 16px;
 }
 }
 }
-@media only screen and (max-width:768px) { 
+@media #{$mobile} { 
 .shrikhand-regular {
     font-family: "Shrikhand", serif;
 }
@@ -1138,7 +959,7 @@ h1 {
     display: flex;
     justify-content: center;
     text-align: center;
-    width: 68%;
+    width: 46%;
     height: 50px;
     border-radius: 37px;
     border:none;
