--- a/ASSETS/sass/main.scss
+++ b/ASSETS/sass/main.scss
@@ -912,10 +912,11 @@ main {
     // height: 225px;
     background-color: $Background-color;
     // box-shadow: 0px 0.5px 5px 1px rgba(0, 0, 0, 9);
+    padding-bottom: 40px;
 }
 .hp-block{
     width: 100%;
-    // height: 205px;
+    padding-bottom: 40px;
     padding-top: 30px;
 }
 h1 { 
